messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging_app
  template:
    metadata:
      labels:
        app: messaging_app
    spec:
      containers:
        - name: messaging_app
          image: messaging_app-web:latest
          ports:
            - containerPort: 3000
